[package]
name = "pandorust"
version = "0.1.0"
edition = "2024"
description = "A pure-Rust document converter. Markdown, HTML, DOCX, PDF, PPTX."
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comrak = "0.50"
docx-rs = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
